<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">weather</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="enter">请输入城市名称:</string>
    <string name="date">时间：</string>
    <string name="maximum">最高温度：</string>
    <string name="minimum">最低温度：</string>
    <string name="windspeed">风速：</string>
    <string name="winddirection">风向:</string>
    <string name="dress">衣橱</string>
    <string name="tomorrow">明天</string>
    <string name="title_activity_maintomorrow">MaintomorrowActivity</string>
    <string name="today">今天</string>
    <string name="title_activity_dress">DressActivity</string>
    <string name="zhinan">穿衣指南：</string>
    <string name="sum">宜穿短袖、短裤、裙子等适宜夏季的服装</string>
    <string name="shushi">宜穿薄衫裤、长袖T恤、薄型套装等春秋换季装</string>
    <string name="jiaol">宜穿夹克衫、西装外套、薄棉衫等过渡衣物</string>
    <string name="leng">宜穿毛衣、大衣外套、夹克衫等较为保暖的衣物</string>
    <string name="chaol">宜穿毛衣、棉袄、羽绒服等保暖衣物</string>
    <string name="title_activity_photo">PhotoActivity</string>
    <string name="kuzi">裤子</string>
    <string name="mianyi">棉衣</string>
    <string name="waitao">外套</string>
    <string name="qunzi">裙子</string>
    <string name="dadishan">打底衫</string>
    <string name="dayi">大衣</string>
    <string name="title_activity_full">FullActivity</string>
    <string name="title_activity_wedget_provider">WedgetProvider</string>

</resources>
