<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.weather.PhotoActivity" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <Button
            android:id="@+id/b1"
            android:layout_width="fill_parent"
            android:layout_height="60sp"
            android:layout_marginTop="23dp"
            android:background="@drawable/darkblue"
            android:textColor="@drawable/white"
            android:textSize="25sp"
            android:text="@string/qunzi" />

        <Button
            android:id="@+id/b2"
            android:layout_width="fill_parent"
            android:layout_height="60sp"
            android:background="@drawable/darkblue"
            android:textColor="@drawable/white"
            android:textSize="25sp"
            android:text="@string/dadishan" />

        <Button
            android:id="@+id/b3"
            android:layout_width="fill_parent"
            android:layout_height="60sp"
            android:background="@drawable/darkblue"
            android:textColor="@drawable/white"
            android:textSize="25sp"
            android:text="@string/waitao" />

        <Button
            android:id="@+id/b4"
            android:layout_width="fill_parent"
            android:layout_height="60sp"
            android:background="@drawable/darkblue"
            android:textColor="@drawable/white"
            android:textSize="25sp"
            android:text="@string/dayi" />

        <Button
            android:id="@+id/b5"
            android:layout_width="fill_parent"
            android:layout_height="60sp"
            android:background="@drawable/darkblue"
            android:textColor="@drawable/white"
            android:textSize="25sp"
            android:text="@string/mianyi" />

        <Button
            android:id="@+id/b6"
            android:layout_width="fill_parent"
            android:layout_height="60sp"
            android:background="@drawable/darkblue"
            android:textColor="@drawable/white"
            android:textSize="25sp"
            android:text="@string/kuzi" />

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="64dp"
 />

</RelativeLayout>